--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "install-prod": "npm install --omit=dev",
-    "build": "npm install"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +13,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "moment-timezone": "^0.5.43",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
